--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,20 @@
-doctype 5
-html
+!!! 5
+html(lang='es')
   head
+    meta(charset='utf-8')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav
+      // suppose title local denotes the active nav item
+      - var nav = {}; nav[title] = 'active'
+      ul
+        // pass title to li class via nav object
+        li(class='#{nav.Home}')
+           // different href and anchor text
+           a(href='/') Home
+        li(class='#{nav.About}')
+           a(href='/about') About
+        li(class='#{nav.Contact}')
+           a(href='/contact') Contact    
     block content
